--- a/CalculatorServer/Pages/Index.razor
+++ b/CalculatorServer/Pages/Index.razor
@@ -11,7 +11,7 @@
 
         @if(ExpressionValue!="")
         {
-            <button type="default" class="btn-eliminate" @onclick="()=>{ExpressionValue=s;}">⨯</button>
+            <button type="default" class="btn-eliminate" @onclick="()=>{ExpressionValue=s; ExpressionDerivate=s;}">⨯</button>
         }
         else
         {
