--- a/CalculatorServer/Pages/Index.razor
+++ b/CalculatorServer/Pages/Index.razor
@@ -64,7 +64,7 @@
     private void Derivate()
     {
         Expression func = Expression.CreateExpression(ExpressionValue, Gui.operators, Gui.less_priority);
-        Expression expression = func.Derivate(VariableToDerivate);
+        Expression expression = func.Derivate(VariableToDerivate).Evaluate(new Dictionary<char, double>());
         ExpressionDerivate = expression.ToString(Gui.less_priority);
     }
 
