--- a/CalculatorServer/Pages/Index.razor
+++ b/CalculatorServer/Pages/Index.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1 style="text-align: center">Derivadas Parciales</h1>
+<h1 style="text-align: center;font-family: Edwardian Script ITC;">Derivadas Parciales</h1>
 
 <div style="display: flex; justify-content:center;">
     <div style="display:inline-flex;">
