--- a/CalculatorServer/wwwroot/css/site.css
+++ b/CalculatorServer/wwwroot/css/site.css
@@ -13,9 +13,16 @@ a, .btn-link {
 }
 
 .btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    height: 30px;
+
+    background-color: #1197cc;
+    box-shadow: #094c66 4px 4px 0px;
+    border-radius: 8px;
+    transition: transform 200ms, box-shadow 200ms;
+}
+.btn-primary :active{
+    transform: translateY(4px) translateX(4px);
+    box-shadow: #094c66 0px 0px 0px;
 }
 
 .content {
