--- a/CalculatorServer/Pages/Index.razor
+++ b/CalculatorServer/Pages/Index.razor
@@ -1,5 +1,8 @@
 ﻿@page "/"
 @using ExpressionCalculator
+@using Microsoft.AspNetCore.Http.Features
+@using Microsoft.AspNetCore.Mvc.Filters
+@using Microsoft.AspNetCore.Mvc.ModelBinding.Validation
 
 <PageTitle>Index</PageTitle>
 
@@ -33,20 +36,36 @@
                 <InputSelect @bind-Value="VariableToDerivate" class="InputSelect">
                     @foreach (var item in Variables)
                     {
-                        <option value="@item">@item</option>
+                        <option value="@item.Item1">@item.Item1</option>
                     }
                 </InputSelect>
             </EditForm>
         </div>
         <div style="width: 30px;"></div>
         <div style="display: flex; justify-content: center;">
-            <button class="Derivate1" @onclick="Taylor" >Aprox por Taylor :</button>
-            <input type="number" class="InputSelect" @bind="_aprox"/>
+            <button class="Derivate1" @onclick="Taylor" >Aprox por Taylor</button>
+            <button class="Derivate1R" @onclick="()=>{_selectVector = true;}">Seleccionar Vector</button>
+            
         </div>
         <div style="width: 30px;"></div>
         <div style="display: flex; justify-content: center;">
             <button class="Derivate2" @onclick="Integrate">Integrar de 0 a 1</button>
         </div>
+    </div>
+}
+
+<br/>
+
+@if (_selectVector)
+{
+    <div style="display: flex; justify-content: center">
+        @foreach(var item in Variables)
+        {
+            <label style="width: 30px; height: 30px;">@item.Item1</label>
+            <input type="number" @bind="aprox[item.Item2]" style="width: 50px; height: 30px;"/>
+            <br/>
+            <div style="width: 20px;"></div>
+        }
     </div>
 }
 
@@ -91,17 +110,22 @@
 @code
 {
     private string ExpressionDerivate { get; set; } = "";
+    
     private string ExpressionTaylor { get; set; } = "";
+    
     private string ExpressionIntegral { get; set; } = "";
 
     private bool _expression = false;
 
+    private bool _selectVector;
+
     private string s = "";
-    private List<double> aprox = new List<double>();
-    private int _aprox = 0;
+    
+    private double[] aprox = Array.Empty<double>();
+    
     private string ExpressionValue { get; set; } = "";
 
-    private List<char> Variables { get; set; } = new List<char>();
+    private List<(char,int)> Variables { get; set; } = new List<(char,int)>();
 
     private char VariableToDerivate { get; set; } = '0';
 
@@ -125,27 +149,25 @@
     {
         int first = Variables.Count;
         Variables = Gui.DeterminateVariables(ExpressionValue);
+        aprox = new double[Variables.Count];
         int after = Variables.Count;
         ExpressionDerivate = "";
         ExpressionTaylor = "";
         ExpressionIntegral = "";
 
-        if (after > first) aprox.Add(0);
-        else if (first > after) aprox.RemoveAt(aprox.Count - 1);
+        // if (after > first) aprox.Add(0);
+        // else if (first > after) aprox.RemoveAt(aprox.Count - 1);
     }
 
     private void Taylor()
     {
+        _selectVector = false;
+        
         Expression func = Expression.CreateExpression(ExpressionValue, Gui.operators, Gui.less_priority);
         ExpressionTaylor = "";
 
         Taylor result = new Taylor(func);
-        //double[] n = aprox.ToArray();
-        double[] n = new double[_aprox];
-        for (int i = 0; i < _aprox; i++)
-        {
-            n[i] = i;
-        }
+        double[] n = aprox;
 
         IEnumerable<Expression> sum = result.N_Terms(5, n);
         foreach (var exp in sum)
