--- a/CalculatorServer/Pages/Index.razor
+++ b/CalculatorServer/Pages/Index.razor
@@ -121,7 +121,7 @@
         ExpressionIntegral = answer.ToString();
     }
 
-    }
+
     private void DeterminateVariables()
     {
         int first = Variables.Count;
@@ -137,19 +137,21 @@
 
     private void Taylor()
     {
+
         Expression func = Expression.CreateExpression(ExpressionValue, Gui.operators, Gui.less_priority);
-        
 
         Taylor result = new Taylor(func);
-        //double[] n = aprox.ToArray();
-        double[] n = new double[_aprox];
-        for (int i = 0; i < _aprox; i++)
-        {
-            n[i] = i;
-        }
+
+        double[] n = new double[1];
+
+        n[0] = aprox[0];
 
         IEnumerable<Expression> sum = result.N_Terms(5,n);
-        foreach(var exp in sum)
+
+        ExpressionTaylor = sum.First().ToString(Gui.less_priority);
+        sum = sum.Skip(1);
+        
+        foreach (var exp in sum)
         {
             ExpressionTaylor += " + " + exp.ToString(Gui.less_priority);
         }
