--- a/CalculatorServer/wwwroot/css/site.css
+++ b/CalculatorServer/wwwroot/css/site.css
@@ -127,6 +127,14 @@ a, .btn-link {
         border-left: groove 2px;
         border-right: 0;
     }
+    .Cant{
+        border-top: groove 2px;
+        border-bottom: groove 2px;
+        border-left: 0;
+        border-right: 0;
+        width: 30px;
+        height: 30px;
+    }
 
 .Derivate1R {
     width: 160px; height: 30px; border-bottom-right-radius: 10px; border-top-right-radius: 10px;
@@ -139,8 +147,34 @@ a, .btn-link {
 }
     
     .Derivate2{
-        width: 200px; height: 30px; border-radius: 10px; 
+        width: 110px; height: 30px; border-bottom-left-radius: 10px;
+        border-top-left-radius: 10px; 
         background-color: #fff;
 
-        border: groove 2px;
+        border-top: groove 2px;
+        border-bottom: groove 2px;
+        border-left: groove 2px;
+        border-right: 0;
+    }
+    .A{
+        width: 30px; height: 30px; 
+        background-color: #fff;
+
+        border-top: groove 2px;
+        border-bottom: groove 2px;
+        border-right: 0;
+        border-left: 0;
+    }
+
+    .B{
+        width: 30px; height: 30px; 
+        background-color: #fff;
+
+        border-top: groove 2px;
+        border-bottom: groove 2px;
+        border-right: groove 2px;
+        border-left: 0;
+
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
     }
